making the role much more flexible
- big improvement of README, still more work to go.
- moved most variables from ./vars to ./defaults, renamed a few
- auto instal pip and npm when packages are defined

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,8 +4,9 @@
 dependencies: []
 
 galaxy_info:
+  role_name: neovim
   author: gikeymarcia
-  description: Deploy the latest Neovim and sync your config for Debian/Ubuntu
+  description: Deploy the latest Neovim and sync your configs.
 
   # - BSD-3-Clause (default)
   # - MIT
@@ -19,14 +20,10 @@ galaxy_info:
   platforms:
     - name: Debian
       versions:
-        - stretch
-        - buster
-        - bullseye
+        - all
     - name: Ubuntu
       versions:
-        - bionic
-        - focal
-        - impish
+        - all
 
   galaxy_tags:
     - neovim
