--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,6 +6,29 @@
 # (See Using Variables for more information)
 # https://docs.ansible.com/ansible/latest/user_guide/playbooks_variables.html#playbooks-variables
 ---
+# application versions
+neovim_version: "0.6.1"
+treesitter_version: "0.20.6"
+
+# variables for downloading appimages
+dl_root: "/software"
+nvim_dl_dir: "{{ dl_root }}/nvim-{{ neovim_version }}"
+nvim_appimage_url: "https://github.com/neovim/neovim/releases/download/v{{ neovim_version }}/nvim.appimage"
+treesitter_dl_dir: "{{ dl_root }}/treesitter-{{ treesitter_version }}"
+treesitter_dl_name: "tree-sitter-linux-x64.gz"
+treesitter_archive_url: "https://github.com/tree-sitter/tree-sitter/releases/download/v{{ treesitter_version }}/{{treesitter_dl_name}}"
+treesitter_filename: "tree-sitter-linux-x64"
+
+# toggles for end-users
 neovim: true
-neovim_ide: false
+treesitter: true
 neovim_nightly: false
+
+neovim_pde: false
+neovim_apt_packages: []
+neovim_pip_packages: []
+neovim_npm_packages: []
+neovim_config_dirs: []
+neovim_external_config: []
+neovim_config_syncs: []
+...
