--- a/tasks/neovim-PDE.yml
+++ b/tasks/neovim-PDE.yml
@@ -1,36 +1,36 @@
 # Tasks to install neovim with my IDE-like configuration
 ---
 
-- name: Ensure supporting `apt` packages are installed.
-  become: true
+- name: "Latest PDE apt packages installed."
   ansible.builtin.apt:
-    name:
-      - shellcheck
+    name: "{{ item }}"
     state: latest
+  with_items: "{{ neovim_apt_packages }}"
+  when: neovim_apt_packages | length > 0
 
-- name: "NeoVim-IDE `pip` packages up-to-date."
+- name: "Pip3 Installed for pip packages."
+  ansible.builtin.apt: name=python3-pip state=latest
+  when: neovim_pip_packages | length > 0
+
+- name: "Latest PDE pip packages installed."
   become_user: "{{ primary_user }}"
   ansible.builtin.pip:
-    name:
-      - ansible-lint[yamllint]
-      - yamllint
-      - black
-      - flake8
-      - flake8-bugbear
-      - virtualenv
+    name: "{{ item }}"
     state: latest
+  with_items: "{{ neovim_pip_packages }}"
+  when: neovim_pip_packages | length > 0
 
-- name: Ensure Neovim configuration directories exist.
-  ansible.builtin.file:
-    path: "{{ item }}"
-    state: directory
-    owner: "{{ primary_user }}"
-    group: "{{ primary_user }}"
-    mode: '0755'
-  with_items:
-    - "{{ primary_home }}/.config/nvim"
-    - "{{ primary_home }}/.config/coc/extensions"
+- name: "npm installed from repository."
+  ansible.builtin.apt: name=npm state=latest
+  when: neovim_npm_packages | length > 0
 
+- name: "Ensure latest npm packages are installed."
+  community.general.npm:
+    name: "{{ item }}"
+    global: true
+    state: latest
+  with_items: "{{ neovim_npm_packages }}"
+  when: neovim_npm_packages | length > 0
 
 #                                  .o88o.  o8o
 #                                  888 `"  `"'
@@ -41,6 +41,18 @@
 # `Y8bod8P' `Y8bod8P' o888o o888o o888o   o888o `8oooooo.  8""888P'
 #  CONFIG -- confi$%-- rsync -- synchronize     d"     YD
 #                                               "Y88888P'
+
+- name: "Required configuration directories exist."
+  ansible.builtin.file:
+    path: "{{ item }}"
+    state: directory
+    owner: "{{ primary_user }}"
+    group: "{{ primary_user }}"
+    mode: '0755'
+  with_items: "{{ neovim_config_dirs }}"
+  when: neovim_config_dirs | length > 0
+
+
 - name: Ensure various configurations are in place.
   ansible.builtin.copy:
     src: "{{ item.src }}"
@@ -48,12 +60,12 @@
     owner: "{{ primary_user }}"
     group: "{{ primary_user }}"
     mode: '0644'
-  loop:
-    # TODO VARS these src: dest: pairs and configure for your needs
-    - src: ~/.config/shellcheckrc
-      dest: "{{ primary_home }}/.config/shellcheckrc"
-    - src: ~/.config/flake8
-      dest: "{{ primary_home  }}/.config/flake8"
+  loop: "{{ neovim_external_config }}"
+  when: neovim_external_config | length > 0
+
+- name: "Rsync installed to syncronize nvim configs."
+  ansible.builtin.apt: name=rsync state=present
+  when: neovim_config_syncs | length > 0
 
 - name: Neovim configuration synchronized and up-to-date.
   ansible.posix.synchronize:
@@ -64,17 +76,8 @@
     src: "~/.config/nvim/{{ item }}"
     dest: "{{ primary_home }}/.config/nvim/{{ item }}"
     delete: true
-  # TODO VARS turn this list into variables
-  with_items:
-    - init.vim
-    - coc-settings.json
-    - autoload/
-    - ftplugin/
-    - lua/
-    - plug-config/
-    - snips/
-    - spell/
-    - syntax/
+  with_items: "{{ neovim_config_syncs }}"
+  when: neovim_config_syncs | length > 0
 
 ...
 # vim: foldlevel=1: filetype=yaml.ansible :
