--- a/tasks/neovim-PDE.yml
+++ b/tasks/neovim-PDE.yml
@@ -6,11 +6,15 @@
     name: "{{ item }}"
     state: "{{ neovim_apt_state }}"
   with_items: "{{ neovim_apt_packages }}"
-  when: neovim_apt_packages | length > 0
+  when:
+    - neovim_apt_packages | length > 0
+    - ansible_os_family == "Debian"
 
 - name: "Pip3 Installed for pip packages."
   ansible.builtin.apt: name=python3-pip state={{ neovim_pip3_packager_state }}
-  when: neovim_pip_packages | length > 0
+  when:
+    - neovim_pip_packages | length > 0
+    - ansible_os_family == "Debian"
 
 - name: "Latest PDE pip packages installed."
   become_user: "{{ primary_user }}"
@@ -21,8 +25,10 @@
   when: neovim_pip_packages | length > 0
 
 - name: "npm installed from repository."
-  ansible.builtin.apt: name=npm state=latest
-  when: neovim_npm_packages | length > 0
+  ansible.builtin.apt: name=npm state={{ neovim_npm_packager_state }}
+  when:
+    - neovim_npm_packages | length > 0
+    - ansible_os_family == "Debian"
 
 - name: "Ensure latest npm packages are installed."
   community.general.npm:
@@ -65,7 +71,9 @@
 
 - name: "Rsync installed to syncronize nvim configs."
   ansible.builtin.apt: name=rsync state=present
-  when: neovim_config_syncs | length > 0
+  when:
+    - neovim_config_syncs | length > 0
+    - ansible_os_family == "Debian"
 
 - name: Neovim configuration synchronized and up-to-date.
   ansible.posix.synchronize:
