installs follow Linux Filesystem Hierarchy Standard

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -11,12 +11,11 @@ neovim_version: "0.7.2"
 treesitter_version: "0.20.7"
 
 # variables for downloading appimages
-dl_root: "/software"
-nvim_dl_dir: "{{ dl_root }}/nvim-{{ neovim_version }}"
+nvim_dl_dir: "/opt/nvim/{{ neovim_version }}"
 nvim_appimage_url: "https://github.com/neovim/neovim/releases/download/v{{ neovim_version }}/nvim.appimage"
-treesitter_dl_dir: "{{ dl_root }}/treesitter-{{ treesitter_version }}"
+treesitter_dl_dir: "/opt/treesitter/{{ treesitter_version }}"
 treesitter_dl_name: "tree-sitter-linux-x64.gz"
-treesitter_archive_url: "https://github.com/tree-sitter/tree-sitter/releases/download/v{{ treesitter_version }}/{{treesitter_dl_name}}"
+treesitter_archive_url: "https://github.com/tree-sitter/tree-sitter/releases/download/v{{ treesitter_version }}/{{ treesitter_dl_name }}"
 treesitter_filename: "tree-sitter-linux-x64"
 
 # toggles for end-users
