--- a/tasks/install-treesitter.yml
+++ b/tasks/install-treesitter.yml
@@ -9,21 +9,21 @@
     mode: '0750'
     path: "{{ treesitter_dl_dir }}"
 
-- name: "TreeSitter v{{ treesitter_version }} compressed binary downloaded."
+- name: "TreeSitter compressed binary downloaded. v{{ treesitter_version }}"
   ansible.builtin.get_url:
     url: "{{ treesitter_archive_url }}"
     dest: "{{ treesitter_dl_dir }}/{{ treesitter_dl_name }}"
     mode: '0555'
 
-- name: "TreeSitter: v{{ treesitter_version }} download decompressed."
+- name: "TreeSitter: download decompressed v{{ treesitter_version }}"
   ansible.builtin.command:
     chdir: "{{ treesitter_dl_dir }}"
     cmd: gunzip --keep {{ treesitter_dl_name }}
     creates: "{{ treesitter_dl_dir }}/{{ treesitter_filename }}"
 
-- name: "TreeSitter: v{{ treesitter_version }} installed."
+- name: "TreeSitter installed v{{ treesitter_version }}"
   ansible.builtin.copy:
-    remote_src: yes
+    remote_src: true
     src: "{{ treesitter_dl_dir }}/{{ treesitter_filename }}"
     dest: /usr/local/bin/tree-sitter
     owner: root
