DEPRECATION: primary_home variable is gone
Before I let users define both primary_home and primary_user but it was
left a pointless field. I was solvig a theoretical use-case problem with
the real life problem of additional complexity.

Now the concept of primary_home is gone and replaced with the explicit
use of `/home/{{ primary_user }}`. One less variable to get between you
and your configuration. If a server needs a custom user that new
primary_user can be defined.

--- a/tasks/neovim-PDE.yml
+++ b/tasks/neovim-PDE.yml
@@ -81,7 +81,7 @@
     #   paths ending in `/` are directories, otherwise will sync files
     #   add and remove whatever part of your config needs synchronization
     src: "~/.config/nvim/{{ item }}"
-    dest: "{{ primary_home }}/.config/nvim/{{ item }}"
+    dest: "/home/{{ primary_user }}/.config/nvim/{{ item }}"
     delete: true
   with_items: "{{ neovim_config_syncs }}"
   when: neovim_config_syncs | length > 0
