--- a/tasks/install-neovim.yml
+++ b/tasks/install-neovim.yml
@@ -2,7 +2,9 @@
 ---
 
 - name: "Ensure old neovim from repository is absent."
-  ansible.builtin.apt: name=neovim state=absent
+  ansible.builtin.apt:
+    name: neovim
+    state: absent
   when: ansible_os_family == "Debian"
 
 - name: "Landing place for nvim download exists."
