--- a/tasks/neovim-PDE.yml
+++ b/tasks/neovim-PDE.yml
@@ -11,7 +11,9 @@
     - ansible_os_family == "Debian"
 
 - name: "Pip3 Installed for pip packages."
-  ansible.builtin.apt: name=python3-pip state={{ neovim_pip3_packager_state }}
+  ansible.builtin.apt:
+    name: python3-pip
+    state: "{{ neovim_pip3_packager_state }}"
   when:
     - neovim_pip_packages | length > 0
     - ansible_os_family == "Debian"
@@ -25,7 +27,9 @@
   when: neovim_pip_packages | length > 0
 
 - name: "Ensure npm installed from repository."
-  ansible.builtin.apt: name=npm state={{ neovim_npm_packager_state }}
+  ansible.builtin.apt:
+    name: npm
+    state: "{{ neovim_npm_packager_state }}"
   when:
     - neovim_npm_packages | length > 0
     - ansible_os_family == "Debian"
@@ -69,7 +73,9 @@
   when: neovim_external_config | length > 0
 
 - name: "Rsync installed to syncronize nvim configs."
-  ansible.builtin.apt: name=rsync state=present
+  ansible.builtin.apt:
+    name: rsync
+    state: present
   when:
     - neovim_config_syncs | length > 0
     - ansible_os_family == "Debian"
