--- a/tasks/neovim-PDE.yml
+++ b/tasks/neovim-PDE.yml
@@ -12,7 +12,9 @@
 
 - name: "Pip3 Installed for pip packages."
   ansible.builtin.apt:
-    name: python3-pip
+    name:
+      - python3-pip
+      - pipx
     state: "{{ neovim_pip3_packager_state }}"
   when:
     - neovim_pip_packages | length > 0
@@ -20,7 +22,7 @@
 
 - name: "Latest PDE pip packages installed."
   become_user: "{{ primary_user }}"
-  ansible.builtin.pip:
+  community.general.pipx:
     name: "{{ item }}"
     state: latest
   with_items: "{{ neovim_pip_packages }}"
