--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -7,12 +7,12 @@
 # https://docs.ansible.com/ansible/latest/user_guide/playbooks_variables.html#playbooks-variables
 ---
 # application versions
-neovim_version: "0.10.2"
-treesitter_version: "0.24.2"
+neovim_version: "0.10.4"
+treesitter_version: "0.25.2"
 
 # variables for downloading appimages
 nvim_dl_dir: "/opt/nvim/{{ neovim_version }}"
-nvim_appimage_url: "https://github.com/neovim/neovim/releases/download/v{{ neovim_version }}/nvim.appimage"
+nvim_appimage_url: "https://github.com/neovim/neovim/releases/download/v{{ neovim_version }}/nvim-linux-x86_64.appimage"
 treesitter_dl_dir: "/opt/treesitter/{{ treesitter_version }}"
 treesitter_dl_name: "tree-sitter-linux-x64.gz"
 treesitter_archive_url: "https://github.com/tree-sitter/tree-sitter/releases/download/v{{ treesitter_version }}/{{ treesitter_dl_name }}"
